force-app/main/default/objects/AgreementObligation__c/AgreementObligation__c.object-meta.xml
<CustomObject>
    <description>This object will act as the junction object between the Agreement and the Obligation</description>
    <label>Agreement Obligation</label>
    <nameField>
        <label>Agreement Obligation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreement Obligations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>