force-app/main/default/objects/AgreementObligation__c/fields/Obligation__c.field-meta.xml
<CustomField>
    <fullName>Obligation__c</fullName>
    <description>This field will store the Obligation associated</description>
    <label>Obligation</label>
    <referenceTo>ObligationConfiguration__c</referenceTo>
    <relationshipLabel>Agreement Obligations</relationshipLabel>
    <relationshipName>Agreement_Obligations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>