force-app/main/default/objects/AgreementObligation__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will store the information of the User who is responsible for tracking the fulfillment of each Obligation. This will be a look-up to the standard User object</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Agreement_Obligations</relationshipName>
    <type>Lookup</type>
</CustomField>